# burner-redis

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  THIRDPARTY.yml  pyproject.toml
.github/conda-smoke/: environment-win.yml  recipe.yaml  win64.yaml
.github/workflows/: ci.yml  conda-smoke.yml  docket-windows.yml  pydocket-compat.yml  release.yml
.gsd/: CODEBASE.md  DECISIONS.md  REQUIREMENTS.md  STATE.md  gsd.db
.gsd/milestones/M001/: M001-RESEARCH.md  M001-ROADMAP.md  M001-SUMMARY.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v0.1.6-MILESTONE-AUDIT.md
.planning/debug/: release-gate-v0.1.1-failure.md
.planning/milestones/: v0.1.6-REQUIREMENTS.md  v0.1.6-ROADMAP.md
.planning/notes/: conda-forge-feedstock-setup-research.md  maturin-tag-versioning-research.md  phase-13-feedstock-submission.md  phase-13-license-audit.md  phase-13-sdist-verification-report.md
.planning/phases/01-foundation-and-string-commands/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-REVIEW.md
.planning/phases/02-hash-and-set-commands/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-sorted-set-commands/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-key-expiration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-stream-commands-and-consumer-groups/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-SUMMARY.md  05-CONTEXT.md
.planning/phases/06-lua-scripting/: 06-01-PLAN.md  06-02-SUMMARY.md
.planning/phases/07-pipeline-and-locking/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md
.planning/phases/08-persistence/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: maturin-native-tag-versioning.md
python/burner_redis/: __init__.py  _burner_redis.pyi  lock.py  pipeline.py  pubsub.py
src/: lib.rs  persistence.rs  scripting.rs  store.rs
src/commands/: hashes.rs  lists.rs  mod.rs  pubsub.rs  sets.rs  sorted_sets.rs  streams.rs  strings.rs
tests/: conftest.py  test_coercion.py  test_expiration.py  test_graceful_shutdown.py  test_hashes.py  test_lists.py  test_locking.py  test_persistence.py  test_pipeline.py  test_prefect_integration.py  test_pubsub.py  test_pydocket_compat.py  test_scripting.py  test_sets.py  test_sorted_sets.py  test_streams.py  test_strings.py
(+228 files in other folders)
