[package]
name = "burner-redis"
version = "0.1.6"
edition = "2024"

[lib]
name = "_burner_redis"
crate-type = ["cdylib"]

[features]
default = ["vendored-lua"]
vendored-lua = ["mlua/vendored"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
tokio = { version = "1.51", features = ["rt", "time", "sync", "macros"] }
parking_lot = "0.12.5"
bytes = "1.11"
thiserror = "2.0"
ordered-float = "5"
mlua = { version = "0.10", features = ["lua54", "send"] }
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
